--- a/css/styles.css
+++ b/css/styles.css
@@ -20,15 +20,33 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 5rem;
-}
-
-h2 {
     font-size: 4rem;
 }
 
+@media (min-width: 768px) {
+    h1 {
+        font-size: 5rem;
+    }
+}
+
+h2 {
+    font-size: 3.2rem;
+}
+
+@media (min-width: 768px) {
+    h2 {
+        font-size: 4rem;
+    }
+}
+
 h3 {
-    font-size: 3rem;
+    font-size: 2.3rem;
+}
+
+@media (min-width: 768px) {
+    h3 {
+        font-size: 3rem;
+    }
 }
 
 a {
@@ -61,6 +79,7 @@ img {
     transition: background-color .3s ease-out;
     text-align: center;
     border: none;
+    width: 100%;
 }
 
 .btn:hover{
@@ -68,9 +87,17 @@ img {
     cursor: pointer;
 }
 
+@media (min-width: 768px) {
+    .btn {
+        width: auto;
+    }
+
+}
+
 .max-width-30 {
     max-width: 30rem;
 }
+
 
 /* Header y navegación */
 
@@ -89,7 +116,16 @@ img {
 .nav-principal {
     padding: 2rem 0;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .nav-principal {
+        flex-direction: row;
+        justify-content: space-evenly;
+        
+    }
 }
 
 .hero {
@@ -97,7 +133,13 @@ img {
     background-repeat: none;
     background-size: cover;
     background-position: center center;
-    height: 40rem;
+    height: 25rem;
+}
+
+@media (min-width: 768px) {
+    .hero {
+        height: 40rem;
+    }
 }
 
 /* Categorias */
@@ -108,6 +150,14 @@ img {
 
 .categorias h2{
     text-align: center;
+}
+
+.categoria {
+    margin-bottom: 2rem;
+}
+
+.categoria img {
+    width: 100%;
 }
 
 .categoria a {
@@ -123,34 +173,58 @@ img {
     border-bottom-right-radius: 1rem;
 }
 
-.listado-categorias {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-   
+@media (min-width: 768px) {
+    .listado-categorias {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+        margin-bottom: 2rem;
+    }
 }
 
 /** Sobre nosotros **/
-
 .sobre-nosotros {
-    background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ),
+    background-image: linear-gradient( to bottom, transparent 50%, #037bc0 50%, #037bc0 100% ),
     url(../img/nosotros.jpg) ;
-    background-position: center left;
+    background-position: center, top left;
     background-repeat: no-repeat;
-    background-size: 100%, 90rem;
-    padding: 10rem 0;
+    background-size: 100%, 70rem;
+}
 
+@media (min-width: 768px) {
+    .sobre-nosotros {
+        background-image: linear-gradient( to right, transparent 50%, #037bc0 50%, #037bc0 100% ),
+        url(../img/nosotros.jpg) ;
+        background-position: center left;
+        background-size: 100%, 160rem;
+        padding: 10rem 0;
+    
+    }
 }
 
 .sobre-nosotros-grid {
-    display: flex;
-    justify-content: flex-end;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+@media (min-width: 768px) {
+    .sobre-nosotros-grid {
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: unset;
+        column-gap: 4rem;
+    }
 }
 
 .texto-nosotros {
-    flex-basis: 50%;
-    padding-left: 10rem;
+    grid-row: 2 / 3;
     color: #ffffff;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .texto-nosotros {
+        grid-column: 2 / 3;
+    }
 }
 
 /* Productos */
@@ -159,9 +233,21 @@ img {
     padding-top: 2rem;
 }
 
+.contenido-principal h2 {
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .contenido-principal h2 {
+        text-align: left;
+    }
+}
+
 .producto {
     background-color: #037bc0;
+    margin-bottom: 2rem;
 }
+
 .texto-producto {
     text-align: center;
     color: #ffffff;
@@ -181,49 +267,57 @@ img {
     font-weight: 900;
 }
 
-.listado-prodcutos {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 2rem;
-}
-.producto:nth-child(1) {
-    grid-column-start: 1;
-    grid-column-end: 7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
+@media (min-width: 768px) {
 
-.producto:nth-child(1) img {
-    height: 48rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(2) {
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
-.producto:nth-child(2) img,
-.producto:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-.producto:nth-child(3) {
-    grid-column-start: 4;
-    grid-column-end: 7;
-}
-.producto:nth-child(4) {
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.producto:nth-child(5) {
-    grid-column-start: 3;
-    grid-column-end: 5;
-}
-.producto:nth-child(6){
-    grid-column-start: 5;
-    grid-column-end: 7;
+    .producto {
+        margin-bottom: 0;
+    }
+    
+    .listado-prodcutos {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        gap: 2rem;
+    }
+    .producto:nth-child(1) {
+        grid-column-start: 1;
+        grid-column-end: 7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    
+    .producto:nth-child(1) img {
+        height: 48rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(2) {
+        grid-column-start: 1;
+        grid-column-end: 4;
+    }
+    
+    .producto:nth-child(2) img,
+    .producto:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    .producto:nth-child(3) {
+        grid-column-start: 4;
+        grid-column-end: 7;
+    }
+    .producto:nth-child(4) {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .producto:nth-child(5) {
+        grid-column-start: 3;
+        grid-column-end: 5;
+    }
+    .producto:nth-child(6){
+        grid-column-start: 5;
+        grid-column-end: 7;
+    }
+    
 }
 
 /* Footer */
@@ -238,13 +332,20 @@ img {
     margin-bottom: 2rem;
 }
 
-.grid-footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+@media (min-width: 768px) {
+    .grid-footer {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .grid-footer a {
+        text-align: start;
+    }
 }
 
 .grid-footer a {
     display: block;
+    text-align: center;
 }
 
 .copyright {
@@ -265,14 +366,23 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 5rem;
+}
+
+@media (min-width: 768px) {
+    .informacion-nosotros {
+        padding: 0;
+    }
 }
 
 /* Blog */
 
-.contenedor-blog {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    column-gap: 4rem;
+@media (min-width: 768px) {
+    .contenedor-blog {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        column-gap: 4rem;
+    }
 }
 
 .entrada {
@@ -285,9 +395,11 @@ img {
     border-bottom: none;
 }
 
-.entrada-meta {
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+    .entrada-meta {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 .entrada-meta p {
@@ -305,6 +417,15 @@ img {
     margin: 0 auto;
 }
 
+.contenido-blog {
+    padding: 2rem;
+}
+@media (min-width: 768px) {
+    .contenido-blog {
+        padding: 0;
+    }
+}
+
 /* Galería */
 
 .galeria {
@@ -312,8 +433,14 @@ img {
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
+}
+
+@media (min-width: 768px) {
+    .galeria {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 .galeria img {
